cart pages, pt. 1

--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -52,10 +52,10 @@ html(lang="ru")
                     nav.header__nav.d-flex.align-items-center.justify-content-center
                         a.header__btn.text-uppercase.mr-3(href="#")
                           +icon('menu','header__btn-icon mr-lg-2')
-                          | Каталог
+                          span.d-none.d-sm-block Каталог
                         a.header__btn.text-uppercase(href="#")
                           +icon('services','header__btn-icon mr-lg-2')
-                          | Услуги
+                          span.d-none.d-sm-block Услуги
                 .header__col.header__col_search.col-xl-3.mb-3
                     form.search(action="#" method="post")
                         input.search__field(type="text" placeholder="Я ищу..." value="")
