--- a/src/scss/tpl/_heading.scss
+++ b/src/scss/tpl/_heading.scss
@@ -1,6 +1,13 @@
 .heading {
   grid-column-gap: $grid-gutter-width;
 
+  &.heading_cart {
+    display: grid;
+    grid-gap: 8px;
+    grid-template-columns: repeat(12,1fr);
+    grid-template-areas: ". cart__title cart__title cart__title cart__title cart__price cart__price cart__quantity cart__quantity cart__summ cart__summ .";
+  }
+
   &.heading_orders {
     grid-template-columns: repeat(2,1fr) 3fr repeat(4,1fr);
 
@@ -44,4 +51,19 @@
 }
 
 .heading__col {
+  &.heading__col_cart-title {
+    grid-area: cart__title;
+  }
+
+  &.heading__col_cart-price {
+    grid-area: cart__price;
+  }
+
+  &.heading__col_cart-quantity {
+    grid-area: cart__quantity;
+  }
+
+  &.heading__col_cart-summ {
+    grid-area: cart__summ;
+  }
 }
