--- a/src/scss/tpl/_recalculate.scss
+++ b/src/scss/tpl/_recalculate.scss
@@ -1,11 +1,24 @@
 .recalculate {
   border-radius: .5rem;
+
+  &.recalculate_sm {
+    @include fw(54px);
+  }
+
+  &.recalculate_shadow {
+    box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, 0.14);
+  }
 }
 
 .recalculate__btn {
   @extend %btn-default;
   @include fs-lh(1rem,1.375rem);
   height: 40px;
+
+  &.recalculate__btn_sm {
+    height: 26px;
+    line-height: .75rem;
+  }
 
   &.recalculate__btn_remove {
     padding: .25rem .188rem .25rem .25rem;
@@ -20,4 +33,9 @@
   @include fw(18px);
   @include fs-lh(1rem,1.375rem);
   height: 40px;
+
+  &.recalculate__value_sm {
+    height: 26px;
+    line-height: .75rem;
+  }
 }
