--- a/src/pug/cart.pug
+++ b/src/pug/cart.pug
@@ -9,7 +9,14 @@ block wrapper
       a.pathway__link(href="#") Главная
       a.pathway__current(href="#") #{title}
     section.content
-      h1 #{title}
+      .d-flex.align-items-center.justify-content-between.mb-4
+        .d-flex.align-items-center
+          h1.mr-4.mb-0 #{title}
+          span.h5.text-nowrap.rounded-pill.color-theme-white.bg-theme-brand.px-2 3 шт.
+        a.btn.btn_nobg.h4.d-none.d-md-flex.p-0(href="#")
+          span.h3.color-theme-brand.mr-2(style="width:16px;height:16px;")
+            +svg('share')
+          span.h5 Рассказать друзьям
     .heading.heading_cart.px-3
       .heading__col.heading__col_cart-title.h6.mb-2 Товар
       .heading__col.heading__col_cart-price.h6.mb-2 Цена
@@ -17,81 +24,87 @@ block wrapper
       .heading__col.heading__col_cart-summ.h6.mb-2 Сумма
     form.table-row(action="#")
       .table-row__header.table-row__header_cart.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3.js-cart
-        .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center
-          a(href="#")
+        .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.md-md-0
+          a.d-block(href="#")
             +img('content/cards/card-1.jpg')
-        .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center
+        .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
           a.h5(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
-        .table-row__col.table-row__col_cart-price.d-md-flex.flex-column.align-items-start.justify-content-center
+        .table-row__col.table-row__col_cart-price.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
+          .d-block.d-md-none.mr-1 Цена:
           span.d-flex.h3
-            span.font-weight-bold.mr-1.js-price 7 337.12
+            span.font-weight-bold.mr-1.text-nowrap.js-price 7 337.12
             | ₽
-        .table-row__col.table-row__col_cart-quantity.d-md-flex.flex-column.align-items--start.justify-content-center
+        .table-row__col.table-row__col_cart-quantity.d-md-flex.flex-column.align-items-start.justify-content-center.mb-2.mb-md-0
           .d-flex.align-items-center
-            .color-theme-disabled.mr-3(style="width:16px;height:16px;")
+            .table-row__close.color-theme-disabled.mr-3(style="width:16px;height:16px;flex:0 0 16px;")
               +svg('close-noborder')
             .recalculate.recalculate_sm.recalculate_shadow.d-flex.align-items-center.overflow-hidden.bg-theme-white
               input.recalculate__field.d-none(type="number" name="count" value="1")
               button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_remove(type="button") -
               .recalculate__value.recalculate__value_sm.d-flex.align-items-center.justify-content-center.color-theme-brand 1
               button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_add(type="button") +
-        .table-row__col.table-row__col_cart-summ.d-md-flex.flex-column.align-items-start.justify-content-center
+        .table-row__col.table-row__col_cart-summ.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
+          .d-block.d-md-none.mr-3 Сумма:
           span.d-flex.h3
-            span.font-weight-bold.mr-1.js-summ 7 337.12
+            span.font-weight-bold.mr-1.text-nowrap.js-summ 7 337.12
             | ₽
         .table-row__col.table-row__col_cart-close.d-md-flex.flex-column.align-items-center.justify-content-center
           button.h2.btn-unstyled.color-theme-brand(type="button")
             +icon('close')
     form.table-row(action="#")
       .table-row__header.table-row__header_cart.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3.js-cart
-        .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center
-          a(href="#")
+        .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.md-md-0
+          a.d-block(href="#")
             +img('content/cards/card-1.jpg')
-        .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center
+        .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
           a.h5(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
-        .table-row__col.table-row__col_cart-price.d-md-flex.flex-column.align-items-start.justify-content-center
+        .table-row__col.table-row__col_cart-price.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
+          .d-block.d-md-none.mr-1 Цена:
           span.d-flex.h3
-            span.font-weight-bold.mr-1.js-price 7 337.12
+            span.font-weight-bold.mr-1.text-nowrap.js-price 7 337.12
             | ₽
-        .table-row__col.table-row__col_cart-quantity.d-md-flex.flex-column.align-items--start.justify-content-center
+        .table-row__col.table-row__col_cart-quantity.d-md-flex.flex-column.align-items-start.justify-content-center.mb-2.mb-md-0
           .d-flex.align-items-center
-            .color-theme-disabled.mr-3(style="width:16px;height:16px;")
+            .table-row__close.color-theme-disabled.mr-3(style="width:16px;height:16px;flex:0 0 16px;")
               +svg('close-noborder')
             .recalculate.recalculate_sm.recalculate_shadow.d-flex.align-items-center.overflow-hidden.bg-theme-white
               input.recalculate__field.d-none(type="number" name="count" value="1")
               button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_remove(type="button") -
               .recalculate__value.recalculate__value_sm.d-flex.align-items-center.justify-content-center.color-theme-brand 1
               button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_add(type="button") +
-        .table-row__col.table-row__col_cart-summ.d-md-flex.flex-column.align-items-start.justify-content-center
+        .table-row__col.table-row__col_cart-summ.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
+          .d-block.d-md-none.mr-3 Сумма:
           span.d-flex.h3
-            span.font-weight-bold.mr-1.js-summ 7 337.12
+            span.font-weight-bold.mr-1.text-nowrap.js-summ 7 337.12
             | ₽
         .table-row__col.table-row__col_cart-close.d-md-flex.flex-column.align-items-center.justify-content-center
           button.h2.btn-unstyled.color-theme-brand(type="button")
             +icon('close')
     form.table-row.mb-4(action="#")
       .table-row__header.table-row__header_cart.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3.js-cart
-        .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center
-          a(href="#")
+        .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.md-md-0
+          a.d-block(href="#")
             +img('content/cards/card-1.jpg')
-        .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center
+        .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
           a.h5(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
-        .table-row__col.table-row__col_cart-price.d-md-flex.flex-column.align-items-start.justify-content-center
+        .table-row__col.table-row__col_cart-price.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
+          .d-block.d-md-none.mr-1 Цена:
           span.d-flex.h3
-            span.font-weight-bold.mr-1.js-price 7 337.12
+            span.font-weight-bold.mr-1.text-nowrap.js-price 7 337.12
             | ₽
-        .table-row__col.table-row__col_cart-quantity.d-md-flex.flex-column.align-items--start.justify-content-center
+        .table-row__col.table-row__col_cart-quantity.d-md-flex.flex-column.align-items-start.justify-content-center.mb-2.mb-md-0
           .d-flex.align-items-center
-            .color-theme-disabled.mr-3(style="width:16px;height:16px;")
+            .table-row__close.color-theme-disabled.mr-3(style="width:16px;height:16px;flex:0 0 16px;")
               +svg('close-noborder')
             .recalculate.recalculate_sm.recalculate_shadow.d-flex.align-items-center.overflow-hidden.bg-theme-white
               input.recalculate__field.d-none(type="number" name="count" value="1")
               button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_remove(type="button") -
               .recalculate__value.recalculate__value_sm.d-flex.align-items-center.justify-content-center.color-theme-brand 1
               button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_add(type="button") +
-        .table-row__col.table-row__col_cart-summ.d-md-flex.flex-column.align-items-start.justify-content-center
+        .table-row__col.table-row__col_cart-summ.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
+          .d-block.d-md-none.mr-3 Сумма:
           span.d-flex.h3
-            span.font-weight-bold.mr-1.js-summ 7 337.12
+            span.font-weight-bold.mr-1.text-nowrap.js-summ 7 337.12
             | ₽
         .table-row__col.table-row__col_cart-close.d-md-flex.flex-column.align-items-center.justify-content-center
           button.h2.btn-unstyled.color-theme-brand(type="button")
@@ -99,9 +112,9 @@ block wrapper
     form.form.row.mb-5(action="#")
       .col-xl-8.col-md-6.d-flex.flex-wrap.align-items-start.px-0
         .col-xl-7.d-flex.flex-wrap.align-items-center.px-0
-          .col-xl-6.col-md-6
+          .col-xl-6.col-md-6.mb-2.mb-md-0
             label.h6.d-inline-block.mb-0 Предпочтительный год производства шин:
-          .col-xl-5.col-md-6
+          .col-xl-5.col-md-6.mb-3.mb-md-0
             .form__select
               select.form__select-options
                 option 2022
@@ -109,25 +122,42 @@ block wrapper
                 option 2020
                 option 2019
         .col-xl-5.d-flex.flex-wrap.align-items-center.px-0
-          .col-xl-3.col-md-6
+          .col-xl-3.col-md-6.mb-2.mb-md-0
             label.h6.d-inline-block.mb-0 Если старше:
-          .col-xl-8.col-md-6
+          .col-xl-8.col-md-6.mb-3.mb-md-0
             .form__select
               select.form__select-options
                 option позвонить и подобрать аналог
                 option написать и подобрать аналог
                 option позвонить и подобрать аналог
                 option написать и подобрать аналог
-      .col-xl-3.col-md-5.offset-md-1
-        .desclist.mb-3
-          .d-flex.align-items-center.mb-1
-            .desclist__title.h6.d-block.overflow-hidden.px-0.col-md-7 Доставка в ваш город:
-            .h3.col-md-5
-              span.font-weight-bold 750&nbsp;
-              | ₽
-          .d-flex.align-items-center.mb-1
-            .desclist__title.h6.d-block.overflow-hidden.px-0.col-md-7 Итого:
-            .h3.col-md-5
-              span.font-weight-bold 79 337.12&nbsp;
-              | ₽
-        button.btn.text-uppercase.px-5(type="submit") Оформить заказ
+      .col-xl-3.col-md-5.offset-md-1.mb-3.mb-md-0
+        .cart-summary
+          .desclist.mb-3
+            .d-flex.align-items-center.mb-1
+              .desclist__title.h6.d-block.overflow-hidden.px-0.col-md-7 Доставка в ваш город:
+              .h3.col-md-5.text-right.text-md-left
+                span.font-weight-bold 750&nbsp;
+                | ₽
+            .d-flex.align-items-center.mb-1
+              .desclist__title.h6.d-block.overflow-hidden.px-0.col-md-7 Итого:
+              .h3.col-md-5.text-right.text-md-left
+                span.font-weight-bold 79 337.12&nbsp;
+                | ₽
+          .text-center.text-md-left
+            button.btn.text-uppercase.px-5(type="submit") Оформить заказ
+
+      .d-block.d-md-none
+        .text-center.mb-2
+          a.btn.btn_nobg.h4.p-0(href="#")
+            span.h3.color-theme-brand.mr-2(style="width:16px;height:16px;")
+              +svg('continue')
+            span.h5 Продолжить покупки
+        .h6 Зарегистрировавшись на сайте всего один раз вам будет доступна история заказов, повтор заказов, накопительные скидки. &gt;
+
+    .mb-3
+      .h2.font-weight-bold.mb-4 Избранное:
+      include category/carousel.pug
+    .mb-3
+      .h2.font-weight-bold.mb-4 Ранее просмотренные товары:
+      include category/carousel.pug
