--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,6 +35,7 @@ $grid-gutter-width: 8px;
 @import 'tpl/menu';
 @import 'tpl/tabs';
 @import 'tpl/form';
+@import 'tpl/cart';
 @import 'tpl/card';
 @import 'tpl/card-row';
 @import 'tpl/modal';
