--- a/src/scss/tpl/_btn.scss
+++ b/src/scss/tpl/_btn.scss
@@ -1,6 +1,7 @@
 .btn {
   @extend %btn-default;
   @extend %btn-theme;
+  @include border(1px,rgba(0,0,0,0));
   padding: .25rem .75rem;
   white-space: nowrap;
   display: inline-flex;
@@ -8,7 +9,7 @@
   justify-content: center;
 
   &.btn_bordered {
-    border: 1px solid #fcfcfc;
+    border-color: #fcfcfc;
   }
 
   &.btn_nobg {
