cart pages, pt. 4

--- a/src/pug/cart.pug
+++ b/src/pug/cart.pug
@@ -14,6 +14,7 @@ block wrapper
           h1.mr-4.mb-0 #{title}
           span.h5.text-nowrap.rounded-pill.color-theme-white.bg-theme-brand.px-2 3 шт.
         a.btn.btn_nobg.h4.d-none.d-md-flex.p-0(href="#")
+          //- +icon('share','h3 color-theme-brand mr-2')
           span.h3.color-theme-brand.mr-2(style="width:16px;height:16px;")
             +svg('share')
           span.h5 Рассказать друзьям
