--- a/src/pug/checkout.pug
+++ b/src/pug/checkout.pug
@@ -12,41 +12,42 @@ block wrapper
       h1 #{title}
     .row.align-items-start.mb-5
       .col-xl-9.col-lg-8.pr-lg-5
-        form.section.py-0.mb-3(action="#")
-          .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
-            span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 1
-            .h3.flex-grow-1.font-weight-bold.color-theme-brand Дополнительные услуги
-          .border-bottom.d-block.px-md-4.px-3.py-md-4.py-3
-            .row.align-items-center.mb-4
-              .col-sm-5.mb-2.mb-sm-0
-                input.form__toggler.form__toggler_checkbox(id="checkout-service-1" type="checkbox" value="")
-                label.form__label.form__label_checkbox(for="checkout-service-1")
-                  +icon('checked','form__label-icon')
-                  span.form__label-title Шиномонтаж
-              .col-sm-7
-                .h6.color-theme-disabled Вы будете направлены на форму записи на выбранную услугу после оформления заказа.
-            .row.align-items-center
-              .col-sm-5.mb-2.mb-sm-0
-                input.form__toggler.form__toggler_checkbox(id="checkout-service-2" type="checkbox" value="")
-                label.form__label.form__label_checkbox(for="checkout-service-2")
-                  +icon('checked','form__label-icon')
-                  span.form__label-title Сезонное хранение
-              .col-sm-7
-                .h6.color-theme-disabled Вы можете оставить свои старые шины у нас на хранение
-          .px-md-4.px-3.py-3.text-right
-            button.btn.text-uppercase.px-5(type="button") Далее
-        form.section.py-0.mb-3(action="#")
-          .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
-            span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 2
-            .h3.flex-grow-1.font-weight-bold.color-theme-brand Покупатель
-        form.section.py-0.mb-3(action="#")
-          .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
-            span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 3
-            .h3.flex-grow-1.font-weight-bold.color-theme-brand Доставка
-        form.section.py-0.mb-3(action="#")
-          .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
-            span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 4
-            .h3.flex-grow-1.font-weight-bold.color-theme-brand Оплата
+        block checkout
+          form.section.py-0.mb-3(action="#")
+            .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
+              span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 1
+              .h3.flex-grow-1.font-weight-bold.color-theme-brand Дополнительные услуги
+            .border-bottom.px-md-4.px-3.py-md-4.py-3
+              .row.align-items-center.mb-4
+                .col-sm-5.mb-2.mb-sm-0
+                  input.form__toggler.form__toggler_checkbox(id="checkout-service-1" type="checkbox" value="")
+                  label.form__label.form__label_checkbox(for="checkout-service-1")
+                    +icon('checked','form__label-icon')
+                    span.form__label-title Шиномонтаж
+                .col-sm-7
+                  .h6.color-theme-disabled Вы будете направлены на форму записи на выбранную услугу после оформления заказа.
+              .row.align-items-center
+                .col-sm-5.mb-2.mb-sm-0
+                  input.form__toggler.form__toggler_checkbox(id="checkout-service-2" type="checkbox" value="")
+                  label.form__label.form__label_checkbox(for="checkout-service-2")
+                    +icon('checked','form__label-icon')
+                    span.form__label-title Сезонное хранение
+                .col-sm-7
+                  .h6.color-theme-disabled Вы можете оставить свои старые шины у нас на хранение
+            .px-md-4.px-3.py-3.text-right
+              button.btn.text-uppercase.px-5(type="button") Далее
+          form.section.py-0.mb-3(action="#")
+            .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
+              span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 2
+              .h3.flex-grow-1.font-weight-bold.color-theme-brand Покупатель
+          form.section.py-0.mb-3(action="#")
+            .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
+              span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 3
+              .h3.flex-grow-1.font-weight-bold.color-theme-brand Доставка
+          form.section.py-0.mb-3(action="#")
+            .border-bottom.d-flex.align-items-center.px-md-4.px-3.py-2
+              span.section-counter.h3.rounded-circle.bg-theme-brand.color-theme-white.mr-2 4
+              .h3.flex-grow-1.font-weight-bold.color-theme-brand Оплата
       .sidebar.col-xl-3.col-lg-4.mb-lg-4
         .box-shadow.border-radius
           .border-bottom.px-md-4.px-3.py-md-4.py-3
